# portfolio

./: .breakpoints  .gitignore  build.py  index.html  main.py  pyproject.toml  requirements.txt
static/css/: styles.css
static/js/: article.js  nav.js
website/: __init__.py  views.py
website/static/css/: styles.css
website/static/images/: css3-Icon.svg:Zone.Identifier  git-Icon.svg:Zone.Identifier  github-Icon.svg:Zone.Identifier  javascript-Icon.svg:Zone.Identifier  python-Icon.svg:Zone.Identifier  vaylon-fernandes.png:Zone.Identifier  vscode-Icon.svg:Zone.Identifier
website/static/js/: nav.js
website/templates/: _about_section.html  _achievements.html  _blog.html  _contact.html  _footer.html  _home_section.html  _navbar.html  _skills_section.html  _work_section.html  base.html  index.html
