[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["vaylonfernandes <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"
Frozen-Flask = "^0.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
